commented out the original upload form

--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -85,12 +85,12 @@
 
 <xmp theme="united" style="display:none;">
 
-<h1>Upload New File</h1>
+<!-- <h1>Upload New File</h1>
 <form action="" method=post enctype=multipart/form-data>
 <input type=file name=file> <input type=submit value=Upload>
-</form>
+</form> 
 
-<hr>
+<hr> -->
 
 <h2><!-- directory path navigation -->
 {% for path,url in pathlist %}<a href="{{url}}">{{path}}</a>{% endfor %}
