--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -3,84 +3,19 @@
   <meta charset=="utf-8">
   <title>Angry Share</title>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
-  <!-- <script src="/js/build/build.js?v=6"></script> -->
-  <!-- <script src="https://raw.githubusercontent.com/enyo/dropzone/master/dist/dropzone.js"></script> -->
-
-  <!-- <script src="http://requirejs.org/docs/release/2.1.22/comments/require.js"></script> -->
-
-  <script src="./dropzone.js"></script>
-  <script>
-    //var Dropzone = require(["dropzone"]);
-    Dropzone.autoDiscover = false;
-  </script>
-
-  <style>
-    html, body {
-      height: 100%;
-    }
-    #actions {
-      margin: 2em 0;
-    }
-
-
-    /* Mimic table appearance */
-    div.table {
-      display: table;
-    }
-    div.table .file-row {
-      display: table-row;
-    }
-    div.table .file-row > div {
-      display: table-cell;
-      vertical-align: top;
-      border-top: 1px solid #ddd;
-      padding: 8px;
-    }
-    div.table .file-row:nth-child(odd) {
-      background: #f9f9f9;
-    }
-
-
-
-    /* The total progress gets shown by event listeners */
-    #total-progress {
-      opacity: 0;
-      transition: opacity 0.3s linear;
-    }
-
-    /* Hide the progress bar when finished */
-    #previews .file-row.dz-success .progress {
-      opacity: 0;
-      transition: opacity 0.3s linear;
-    }
-
-    /* Hide the delete button initially */
-    #previews .file-row .delete {
-      display: none;
-    }
-
-    /* Hide the start and cancel buttons and show the delete button */
-
-    #previews .file-row.dz-success .start,
-    #previews .file-row.dz-success .cancel {
-      display: none;
-    }
-    #previews .file-row.dz-success .delete {
-      display: block;
-    }
-
-
-  </style>
-
 
 </head>
 <body>
+
+<div id="selectImage">Select Image</div>
+<div id="fileSubmit">Submit</div>
+
+<div id="droparea">
+    <p>droparea</p>
+    <div id="previewsContainer">
+        <p>previewsContainer</p>
+    </div>
+</div>
 
 
 <xmp theme="united" style="display:none;">
@@ -89,6 +24,7 @@
 <form action="" method=post enctype=multipart/form-data>
 <input type=file name=file> <input type=submit value=Upload>
 </form> 
+
 
 <hr> -->
 
@@ -107,128 +43,10 @@
 </p> 
 
 </xmp>
+
+<!-- Scripts -->
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
-
-
-  <div class="container" id="container">
-
-    <div id="actions" class="row">
-
-      <div class="col-lg-7">
-        <!-- The fileinput-button span is used to style the file input field as button -->
-        <!-- <span class="btn btn-success fileinput-button">
-            <i class="glyphicon glyphicon-plus"></i>
-        </span>
-        <button type="submit" class="btn btn-primary start">
-            <i class="glyphicon glyphicon-upload"></i>
-        </button>
-        <button type="reset" class="btn btn-warning cancel">
-            <i class="glyphicon glyphicon-ban-circle"></i>
-        </button> -->
-      </div>
-
-      <div class="col-lg-5">
-        <!-- The global file processing state -->
-        <span class="fileupload-process">
-          <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-            <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
-          </div>
-        </span>
-      </div>
-
-    </div>
-
-
-    <div class="table table-striped files" id="previews">
-
-      <div id="template" class="file-row">
-        <!-- This is used as the file preview template -->
-        <div>
-            <span class="preview"><img data-dz-thumbnail /></span>
-        </div>
-        <div>
-            <p class="name" data-dz-name></p>
-            <strong class="error text-danger" data-dz-errormessage></strong>
-        </div>
-        <div>
-            <p class="size" data-dz-size></p>
-            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-              <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
-            </div>
-        </div>
-        <div>
-          <button class="btn btn-primary start">
-              <i class="glyphicon glyphicon-upload"></i>
-              <span>Start</span>
-          </button>
-          <button data-dz-remove class="btn btn-warning cancel">
-              <i class="glyphicon glyphicon-ban-circle"></i>
-              <span>Cancel</span>
-          </button>
-          <button data-dz-remove class="btn btn-danger delete">
-            <i class="glyphicon glyphicon-trash"></i>
-            <span>Delete</span>
-          </button>
-        </div>
-      </div>
-
-    </div>
-
-    <script>
-      // Get the template HTML and remove it from the doument
-      var previewNode = document.querySelector("#template");
-      previewNode.id = "";
-      var previewTemplate = previewNode.parentNode.innerHTML;
-      previewNode.parentNode.removeChild(previewNode);
-
-      var myDropzone = new Dropzone(document.body, { // Make the whole body a dropzone
-        url: "http://www.torrentplease.com/dropzone.php", // Set the url
-        thumbnailWidth: 80,
-        thumbnailHeight: 80,
-        parallelUploads: 20,
-        previewTemplate: previewTemplate,
-        autoQueue: false, // Make sure the files aren't queued until manually added
-        previewsContainer: "#previews"//, // Define the container to display the previews
-        //clickable: ".fileinput-button" // Define the element that should be used as click trigger to select files.
-      });
-
-      myDropzone.on("addedfile", function(file) {
-        // Hookup the start button
-        file.previewElement.querySelector(".start").onclick = function() { myDropzone.enqueueFile(file); };
-      });
-
-      // Update the total progress bar
-      myDropzone.on("totaluploadprogress", function(progress) {
-        document.querySelector("#total-progress .progress-bar").style.width = progress + "%";
-      });
-
-      myDropzone.on("sending", function(file) {
-        // Show the total progress bar when upload starts
-        document.querySelector("#total-progress").style.opacity = "1";
-        // And disable the start button
-        file.previewElement.querySelector(".start").setAttribute("disabled", "disabled");
-      });
-
-      // Hide the total progress bar when nothing's uploading anymore
-      myDropzone.on("queuecomplete", function(progress) {
-        document.querySelector("#total-progress").style.opacity = "0";
-      });
-
-      // Setup the buttons for all transfers
-      // The "add files" button doesn't need to be setup because the config
-      // `clickable` has already been specified.
-      /*document.querySelector("#actions .start").onclick = function() {
-        myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED));
-      };
-      document.querySelector("#actions .cancel").onclick = function() {
-        myDropzone.removeAllFiles(true);
-      }; */
-    </script>
-
-  </div>
-
-
-
+<script src="./dropzone.js"></script>
 
 </body>
 </html>
