--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -25,9 +25,6 @@
     html, body {
       height: 100%;
     }
-    #actions {
-      margin: 2em 0;
-    }
 
     /* Mimic table appearance */
     div.table {
@@ -77,7 +74,40 @@
 </head>
 
 <body> <!-- BODY -->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#actions" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Angry Share</a>
+    </div>
+
+    <div class="collapse navbar-collapse pull-right" id="actions">
+        <button type="button" class="btn btn-success navbar-btn fileinput-button">
+            <i class="glyphicon glyphicon-plus"></i>
+            <span>Add files...</span></button>
+        <button type="submit" class="btn btn-primary start navbar-btn">
+            <i class="glyphicon glyphicon-upload"></i>
+            <span>Start upload</span>
+        </button>
+        <button type="reset" class="btn btn-warning cancel navbar-btn">
+            <i class="glyphicon glyphicon-ban-circle"></i>
+            <span>Cancel upload</span>
+        </button>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
 <div class="container" id="container">
+
 
 <h2><!-- directory path navigation -->
 {% for path,url in pathlist %}<a href="{{url}}">{{path}}</a>{% endfor %}
@@ -93,25 +123,8 @@
     {% endfor %}
 </p> 
 
-
-    <!-- upload buttons: add file, start, cancel -->
-    <div id="actions" class="row">
-
-      <div class="col-lg-7">
-        <!-- The fileinput-button span is used to style the file input field as button -->
-        <span class="btn btn-success fileinput-button">
-            <i class="glyphicon glyphicon-plus"></i>
-            <span>Add files...</span>
-        </span>
-        <button type="submit" class="btn btn-primary start">
-            <i class="glyphicon glyphicon-upload"></i>
-            <span>Start upload</span>
-        </button>
-        <button type="reset" class="btn btn-warning cancel">
-            <i class="glyphicon glyphicon-ban-circle"></i>
-            <span>Cancel upload</span>
-        </button>
-      </div>
+    <!-- upload total progress -->
+    <div class="row">
 
       <div class="col-lg-5">
         <!-- The global file processing state -->
@@ -123,7 +136,6 @@
       </div>
 
     </div>
-
 
     <!-- preview panel -->
     <div class="table table-striped files" id="previews">
@@ -160,6 +172,8 @@
       </div>
 
     </div>
+
+</div> <!-- container -->
 
     <script>
       // Get the template HTML and remove it from the doument
@@ -215,6 +229,5 @@
     </script>
 
 
-</div>
 </body>
 </html>
