--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -5,12 +5,12 @@
   <title>Angry Share</title>
 
   <!-- Latest compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}"> -->
 
   <!-- Optional theme -->
-  <!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-theme.css') }}">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-theme.css') }}"> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -26,7 +26,21 @@
   <style>
     html, body {
       height: 100%;
+      color: #ff8000;
     }
+
+    a {
+      color: #ff4000;
+    }
+
+    a:hover {
+      color: #ff8000;
+    }
+
+    #as-nav {
+        background-color: #ff4000;
+        color: #ffffff;
+    } 
 
     /* Mimic table appearance */
     div.table {
@@ -78,7 +92,7 @@
 <body> <!-- BODY -->
 
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid" id="as-nav">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#actions" aria-expanded="false">
@@ -87,7 +101,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Angry Share</a>
+      <a class="navbar-brand" href="#" id="as-nav">Angry Share</a>
     </div>
 
     <div class="collapse navbar-collapse pull-right" id="actions">
