Added white buttons and brand icon.

--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -112,18 +112,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" id="as-nav" style="text-shadow: 1px 1px #000000;"><img src="/favicon.png" style="width: 27px;" /> &nbsp; Angry Share</a>
+      <a class="navbar-brand" href="#" id="as-nav" style="text-shadow: 1px 1px #000000;"><img src="{{url_for('static',filename='fav-96-wshw.png')}}" style="width: 27px;" /> &nbsp; Angry Share</a>
     </div>
 
     <div class="collapse navbar-collapse pull-right" id="actions">
-        <button type="button" class="btn btn-success navbar-btn fileinput-button">
+        <button type="button" class="btn btn-default navbar-btn fileinput-button">
             <i class="glyphicon glyphicon-plus"></i>
             <span>Add files...</span></button>
-        <button type="submit" class="btn btn-primary start navbar-btn">
+        <button type="submit" class="btn btn-default start navbar-btn">
             <i class="glyphicon glyphicon-upload"></i>
             <span>Start upload</span>
         </button>
-        <button type="reset" class="btn btn-warning cancel navbar-btn">
+        <button type="reset" class="btn btn-default cancel navbar-btn">
             <i class="glyphicon glyphicon-ban-circle"></i>
             <span>Cancel upload</span>
         </button>
