--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -102,7 +102,7 @@
 
 <body> <!-- BODY -->
 
-<nav class="navbar navbar-default">
+<nav class="nav nav-pills">
   <div class="container-fluid" id="as-nav">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -112,7 +112,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" id="as-nav" style="text-shadow: 1px 1px #000000;"><img src="{{url_for('static',filename='fav-96-wshw.png')}}" style="width: 27px;" /> &nbsp; Angry Share</a>
+
+
+      <span>
+        <img src="{{url_for('static',filename='fav-96-wshw.png')}}"
+            style="width: 50px;" />
+
+        <span style="display: inline-block; vertical-align: middle; float: none;"><span style="text-shadow: 1px 1px #000000;"><b>Angry Share</b></span><br><small>&nbsp; {{hostname}}</small></span>
+
+      </span>
+
     </div>
 
     <div class="collapse navbar-collapse pull-right" id="actions">
