--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -53,6 +53,10 @@
         color: #ffffff;
     } 
 
+    .file-options {
+        display: none;
+    }
+
     /* Mimic table appearance */
     div.table {
       display: table;
@@ -151,21 +155,53 @@
 
 <!-- listing and linking the files in each dir-->
 <table class="table table-hover">
-    {% for filename,url,style,date in dirlinks %}
+    {% for filename,url,style,date,id in dirlinks %}
     <tr>
         {% if style %} <!-- directories -->
-            <td><i class="fa fa-angle-double-right"></i>&nbsp;<a class="list-group-item-dodo" href="{{url}}">{{filename}} </a></td>
-            <td><span class="text-right" style="float: right;">{{date}}</span></td>
+
+            <td><!-- directory icon, name and url -->
+                <i class="fa fa-angle-double-right"></i>&nbsp;<a
+                    class="list-group-item-dodo" href="{{url}}">{{filename}}</a>
+            </td>
+
+            <td><!-- creation date -->
+                <span class="text-right" style="float: right;">{{date}}</span>
+            </td>
+
+            <td><!-- tools -->
+                <button type="button" id="{{id}}" class="btn btn-danger btn-xs
+                    file-options">Delete</button>
+            </td>
+
         {% else %} <!-- files -->
-            <td><i class="fa fa-file-o"></i>&nbsp;<a class="list-group-item-dodo" href="{{url}}">{{filename}}</a></td>
-            <td><span class="text-right" style="float: right;">{{date}}</span></td>
+
+            <td><!-- file icon, name and url -->
+                <i class="fa fa-file-o"></i>&nbsp;<a
+                    class="list-group-item-dodo" href="{{url}}">{{filename}}</a>
+            </td>
+
+            <td><!-- upload date -->
+                <span class="text-right" style="float: right;">{{date}}</span>
+            </td>
+
+            <td><!-- tools -->
+                <button type="button" id="{{id}}" class="btn btn-danger btn-xs
+                    file-options">Delete</button>
+            </td>
+
         {% endif %}
+
+        <!-- toggle tool buttons -->
+        <td><!-- tools toggle -->
+            <button type="button" id="{{id}}_btn" class="btn btn-default btn-xs" >...</button>
+        </td>
+        <script>
+            $('#{{id}}_btn').on('click', function () {$('#{{id}}').toggle()});
+        </script>
+
     </tr>
     {% endfor %}
 </table>
-
-
-
 
     <!-- upload total progress -->
     <div class="row">
