Added hdd usage to nav

--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -116,7 +116,7 @@
             style="width: 50px;" />
         <span style="display: inline-block; vertical-align: middle; float:
             none;"><span style="text-shadow: 1px 1px #000000;"><b>Angry
-            Share</b></span><br><small>&nbsp; @{{hostname}}</small></span>
+            Share</b></span><br><small>&nbsp; @{{hostname}} : {{df[1]}} / {{df[2]}} {{df[3]}}</small></span>
       </span>
 
     </div>
